autotests/syntax-tests/tests/negative/negative81.sref
Name { Name Name ( $LABEL Name Name ) Name = ; = ; } ; 